--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,11 @@ include/
 # generated doc files
 docs/source/api_docs/
 
-#mac files
+# mac files
 pbc-0.5.14/
 pbc-0.5.14.tar.gz
 setup-charm.sh
 setup-charm-homebrew.sh
+
+# virtualenv folders
+env/
